folder organization and sqlite setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+database
+linkedindata
 linkedindata/combined_postings.xlsx
+linkedindata/postings.csv
 linkedindata/postings_part_1.xlsx
 linkedindata/postings_part_2.xlsx
 linkedindata/postings_part_3.xlsx
@@ -6,11 +9,11 @@ linkedindata/postings_part_4.xlsx
 linkedindata/mappings/skills.csv
 linkedindata/mappings/industries.csv
 linkedindata/jobs/salaries.csv
-linkedindata/companies/companies.csv
-linkedindata/postings.csv
 linkedindata/jobs/job_skills.csv
 linkedindata/jobs/job_industries.csv
 linkedindata/jobs/benefits.csv
 linkedindata/companies/employee_counts.csv
 linkedindata/companies/company_specialities.csv
 linkedindata/companies/company_industries.csv
+linkedindata/companies/companies.csv
+database/linkedindatabase.db
