--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,17 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.3.1
 cryptography==44.0.0
+cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 dnspython==2.7.0
 email_validator==2.2.0
 et_xmlfile==2.0.0
 executing==2.2.0
+fonttools==4.56.0
+greenlet==3.1.1
 grpclib==0.4.7
 h2==4.2.0
 hpack==4.1.0
@@ -23,11 +27,15 @@ idna==3.10
 in-toto-attestation==0.9.3
 ipykernel==6.29.5
 ipython==8.32.0
+ipython-genutils==0.2.0
+ipython-sql==0.5.0
 jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kagglehub==0.3.7
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 model-signing==0.2.0
@@ -38,7 +46,9 @@ openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+pillow==11.1.0
 platformdirs==4.3.6
+prettytable==3.14.0
 prompt_toolkit==3.0.50
 protobuf==5.29.3
 psutil==6.1.1
@@ -50,6 +60,7 @@ pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
 pyOpenSSL==25.0.0
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytz==2025.1
@@ -59,11 +70,14 @@ requests==2.32.3
 rfc3161-client==0.1.2
 rfc8785==0.1.4
 rich==13.9.4
+seaborn==0.13.2
 securesystemslib==1.2.0
 sigstore==3.6.1
 sigstore-protobuf-specs==0.3.2
 sigstore-rekor-types==0.0.18
 six==1.17.0
+SQLAlchemy==2.0.38
+sqlparse==0.5.3
 stack-data==0.6.3
 text-unidecode==1.3
 tornado==6.4.2
