Update requirements.txt pywin

--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytz==2025.1
-pywin32==308
+#pywin32==308
 pyzmq==26.2.1
 requests==2.32.3
 rfc3161-client==0.1.2
