--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter-events==0.12.0
+jupyter-flex==0.9.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.15.0
