--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.5
+joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -107,6 +108,8 @@ rfc3986-validator==0.1.1
 rfc8785==0.1.4
 rich==13.9.4
 rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
 seaborn==0.13.2
 securesystemslib==1.2.0
 Send2Trash==1.8.3
@@ -121,6 +124,7 @@ sqlparse==0.5.3
 stack-data==0.6.3
 terminado==0.18.1
 text-unidecode==1.3
+threadpoolctl==3.5.0
 tinycss2==1.4.0
 tornado==6.4.2
 tqdm==4.67.1
@@ -137,4 +141,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==14.2
+wheel==0.45.1
 widgetsnbextension==4.0.13
