--- a/proyectoabdbook/_config.yml
+++ b/proyectoabdbook/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 title : Linkedin Job Postings Data Analysis
-author: Narly Cipagauta, Karla Murillo, Sarah Coral, Stiven Sánchez
+author: Sarah Coral, Narly Cipagauta, Karla Murillo, Stiven Sánchez
 logo: page_logo.jpg
 
 # Short description about the book
@@ -20,7 +20,7 @@ html:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: book.tex
+    targetname: jobmarketanalysis_book.tex
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
